# Image-processor

./: BMPImage.cpp  BMPImage.h  BlurFilter.cpp  BlurFilter.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Controller.cpp  Controller.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  Filter.h  FilterFactory.cpp  FilterFactory.h  FolderFilter.cpp  FolderFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegFilter.cpp  NegFilter.h  Numbers.cpp  Numbers.h  README.md  SharpFilter.cpp  SharpFilter.h  image_processor.cpp
